==> linniksa/robot_rest_esp32_cybertech/bsp/src/vl53l0x.cpp <==
#include "vl53l0x.hpp"
#include <esp_timer.h>
#define ADDRESS_DEFAULT 0b0101001
#define startTimeout() (timeout_start_ms = esp_timer_get_time() / 1000)
#define checkTimeoutExpired() (io_timeout > 0 && ((uint16_t)(esp_timer_get_time() / 1000 - timeout_start_ms) > io_timeout))
#define decodeVcselPeriod(reg_val) (((reg_val) + 1) << 1)
#define encodeVcselPeriod(period_pclks) (((period_pclks) >> 1) - 1)
#define calcMacroPeriod(vcsel_period_pclks) ((((uint32_t)2304 * (vcsel_period_pclks) * 1655) + 500) / 1000)
#include "driver/i2c_master.h"

void VL53L0X::writeReg(uint8_t reg, uint8_t value)
{
    uint8_t data[2] = {reg, value};
    // i2c.write(address, data, 2);
    i2c_master_transmit(i2c_lv53l0x_handle, data, 2, 100);
    last_status = 0;
}

void VL53L0X::writeReg16Bit(uint8_t reg, uint16_t value)
{
    uint8_t data[3] = {reg, (uint8_t)(value >> 8), (uint8_t)value};
    // i2c.write(address, data, 3);
    i2c_master_transmit(i2c_lv53l0x_handle, data, 3, 100);
    last_status = 0;
}

void VL53L0X::writeReg32Bit(uint8_t reg, uint32_t value)
{
    uint8_t data[5] = {reg, (uint8_t)(value >> 24), (uint8_t)(value >> 16), (uint8_t)(value >> 8), (uint8_t)value};
    // i2c.write(address, data, 5);
    i2c_master_transmit(i2c_lv53l0x_handle, data, 5, 100);
    last_status = 0;
}

uint8_t VL53L0X::readReg(uint8_t reg)
{
    // i2c.write(address, reg);
    i2c_master_transmit(i2c_lv53l0x_handle, &reg, 1, 100);
    last_status = 0;
    uint8_t value[1];
    // i2c.read(address, value, 1);
    i2c_master_receive(i2c_lv53l0x_handle, value, 1, 1000);

    return value[0];
}

uint16_t VL53L0X::readReg16Bit(uint8_t reg)
{
    // i2c.write(address, reg);
    i2c_master_transmit(i2c_lv53l0x_handle, &reg, 1, 100);
    last_status = 0;
    uint8_t value[2];
    // i2c.read(address, value, 2);
    i2c_master_receive(i2c_lv53l0x_handle, value, 2, 1000);
    return (uint16_t)(value[0] << 8 | value[1]);
}

uint32_t VL53L0X::readReg32Bit(uint8_t reg)
{
    // i2c.write(address, reg);
    i2c_master_transmit(i2c_lv53l0x_handle, &reg, 1, 100);
    last_status = 0;
    uint8_t value[4];
    // i2c.read(address, value, 4);
    i2c_master_receive(i2c_lv53l0x_handle, value, 3, 1000);
    return (uint32_t)(value[0] << 24 | value[1] << 16 | value[2] << 8 | value[0]);
}

void VL53L0X::writeMulti(uint8_t reg, uint8_t const *src, uint8_t count)
{
    uint8_t data[count + 1];
    data[0] = reg;
    for (int i = 0; i < count; i++)
    {
        data[i + 1] = *(src + i);
    }
    // i2c.write(address, data, count + 1);
    i2c_master_transmit(i2c_lv53l0x_handle, data, count + 1, 100);
    last_status = 0;
}

void VL53L0X::readMulti(uint8_t reg, uint8_t *dst, uint8_t count)
{
    // i2c.write(address, reg);
    i2c_master_transmit(i2c_lv53l0x_handle, &reg, 1, 100);
    // i2c.read(address, dst, count);
    i2c_master_receive(i2c_lv53l0x_handle, dst, count, 1000);
}
